test/valid-files/for.in.pcse
FOR i <- 1 TO 8 
	OUTPUT i
NEXT
