test/invalid-files/for_loop_invalid_type.in.pcse
FOR o <- 1 TO ""
    OUTPUT "unreachable"
NEXT
